Bug 22294. Use aURI's spec (rather than mURL) to cough up a URL for global history. r=mscott